<resources>
    <string name="app_name">Smart Shop</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="language_eng">Language(Eng)</string>
    <string name="theme_light">Theme(light)</string>
    <string name="theme_dark">Theme(dark)</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="lang">Select you language</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="name_about">Choose a smart shop username. It can be your name or nickname\n\nNote! When you order a product, our operators will receive an order on your behalf and you will be served under that name</string>
    <string name="do_you_want_to_save_this_picture_to_your_profile">Do you want to save this picture to your profile?</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="tv_open_password">please enter your password</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="screen_password_settings">Screen password settings</string>
    <string name="yangi_parol_o_ylab_toping">Yangi Parol o\'ylab toping</string>
    <string name="parolingizni_tasdiqlang">Parolingizni tasdiqlang!</string>
    <string name="kirish_paroli_off">Kirish paroli(o\'chiq)</string>
    <string name="kirish_paroli_on">Kirish paroli(yoniq)</string>
    <string name="delete">Delete</string>
    <string name="manba">Resources used in the program</string>
    <string name="en_uz_ru">en</string>
    <string name="dasturHaqida">About the program</string>
    <string name="savollar">Frequently Asked Questions</string>
    <string name="maxfiylik">Privacy Policy</string>
    <string name="qoidalar">Product purchase rules</string>
    <string name="communityAPP">Support center</string>
    <string name="github">Github</string>
    <string name="telegram">Telegram</string>
    <string name="savol1">How do I purchase the product?</string>
    <string name="savol2">How long does it take for the product to arrive?</string>
    <string name="savol3">What to do if the purchased Product does not arrive?</string>
    <string name="savol4">Other Questions</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>