<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/screen1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        style="@style/screen2"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_userImage"
                style="@style/circle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_margin="16dp"
                app:civ_border_width="1dp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="UserName"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />
                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="email@gmail.com"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="normal|italic" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/language" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="normal"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/language_eng"
                android:id="@+id/tvSpinner"/>
            <Spinner
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:spinnerMode="dialog"
                android:id="@+id/spinner"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            style="@style/screen3"/>
        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:padding="8dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_settings_24" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="normal"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/settings"
                android:id="@+id/tvSettings"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            style="@style/screen3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:padding="8dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/thema"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="normal"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/theme_light"
                android:id="@+id/tvTheme"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/themeSwitch"
                android:track="@drawable/track"
                android:thumb="@drawable/thumb"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            style="@style/screen3"/>

        <LinearLayout
            android:id="@+id/shareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:padding="8dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/share"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="normal"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/share"
                android:id="@+id/tvShare"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            style="@style/screen3"/>

        <LinearLayout
            android:id="@+id/aboutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:padding="8dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/about"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/about"
                android:id="@+id/tvAbout"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            style="@style/screen3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/logOutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp"
            android:padding="8dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_logout_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/log_out"
                android:id="@+id/tvlogOut"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>