<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangeOpenPasswordSettingsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:id="@+id/llTest">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        style="@style/productTextName"
        android:text="@string/parolingizni_tasdiqlang"
        android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:id="@+id/testPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            app:cardBackgroundColor="#B8B8B8"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/cvBackTest">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/cancel"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            app:cardBackgroundColor="#B8B8B8"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/cvNextTest">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/next"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:id="@+id/llSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/back"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    style="@style/productTextName"
                    android:text="@string/screen_password_settings"
                    android:gravity="center"/>
                <ImageView
                    android:visibility="invisible"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                    android:layout_marginRight="16dp"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                style="@style/screen3"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                style="@style/productTextName"
                android:text="Qulfni o'zgartirish"
                android:layout_marginLeft="16dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/deletePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                style="@style/productTextName"
                android:text="Qulfni o'o'chirish"
                android:layout_marginLeft="16dp"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>