<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangeOpenPasswordActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="passwordTv"
        android:visibility="gone"
        android:id="@+id/passwordTV"/>
<LinearLayout
    android:id="@+id/llCreate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etChangePassword"
                android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            app:cardBackgroundColor="#B8B8B8"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/cvBackCreate">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/cancel"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            app:cardBackgroundColor="#B8B8B8"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/cvNextCreate">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/next"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
<LinearLayout
    android:id="@+id/llConfirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etChangePasswordConfirm"
                android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            app:cardBackgroundColor="#B8B8B8"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/cvBackConfirm">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/cancel"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            app:cardBackgroundColor="#B8B8B8"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/cvNextConfirm">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="center"
                android:text="@string/ok"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
</FrameLayout>